--- a/JetAir.Api/JetAir.Api.csproj
+++ b/JetAir.Api/JetAir.Api.csproj
@@ -8,11 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\JetAir.Domain\JetAir.Domain.csproj" />
+    <ProjectReference Include="..\JetAir.Data\JetAir.Data.csproj" />
   </ItemGroup>
 
 </Project>
